# mdflib-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  candump_can0_20250731_123343.mf4  candump_can0_20250731_123403.mf4  my_output.mf4
.github/workflows/: ci.yml
examples/: read_mdf.rs
mdflib/: Cargo.toml  README.md
mdflib-sys/: Cargo.toml  README.md  build.rs  wrapper.h
mdflib-sys/patches/: 0001-musl-compat.patch
mdflib-sys/src/: fallback_bindings.rs  lib.rs  mdf_c_wrapper.cpp  mdf_c_wrapper.h  mdf_export_wrapper.cpp
mdflib/examples/: can_bus_observer_demo.rs  read_mdf.rs
mdflib/src/: attachment.rs  canbusobserver.rs  canmessage.rs  channel.rs  channelarray.rs  channelconversion.rs  channelgroup.rs  channelobserver.rs  datagroup.rs  error.rs  etag.rs  event.rs  file.rs  filehistory.rs  header.rs  lib.rs  log.rs  metadata.rs  reader.rs  sourceinformation.rs  writer.rs
mdflib/tests/: test_buslogger.rs  test_can_bus_observer.rs  test_channel_observer.rs  test_write.rs
mf4-candump/: Cargo.toml  README.md
mf4-candump/src/: main.rs
